# BOOLR

./: .gitignore  Cargo.toml  README.md  adder.board  build.sh  index.html  package.json  test.board  test.html
app/: index.html
app/css/: toolbar.css
app/js/: canvas.js  components – kopija.js  components-rep.js  components.js  console2.js  editDialogs.js  keys.js  localStorage2.js  toolbar.js
js/: components.js  dialogs.js  toolbar.js
src/: audio.rs  canvas.rs  components.rs  dialog.rs  lib.rs  localstorage.rs  saved_custom_components.rs  toolbar.rs
src/components/: mod.rs
