[package]
name = "BOOLR"
version = "0.1.0"
authors = ["sagudev"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.60"
js-sys = "0.3.37"

[dependencies.web-sys]
version = "0.3.37"
features = [
  # audio
  'AudioContext',
  'AudioDestinationNode',
  'AudioNode',
  'AudioParam',
  'OscillatorNode',
  'OscillatorType',
  # DOM
  'Window',
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'CssStyleDeclaration',
  'NodeList',
  'HtmlCollection',
  # canvas
  'CanvasRenderingContext2d',
  'EventTarget',
  'HtmlCanvasElement',
  'MouseEvent',
  'KeyboardEvent',
  'ContextAttributes2d',
]
