[package]
name = "BOOLR"
version = "0.1.0"
authors = ["sagudev"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"
js-sys = "0.3.40"
console_error_panic_hook = { version = "0.1", optional = true }

[dependencies.web-sys]
version = "0.3.40"
features = [
  # audio
  'AudioContext',
  'AudioDestinationNode',
  'AudioNode',
  'AudioParam',
  'OscillatorNode',
  'OscillatorType',
  # DOM
  'Window',
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'CssStyleDeclaration',
  'NodeList',
  'HtmlCollection',
  # canvas
  'CanvasRenderingContext2d',
  'EventTarget',
  'HtmlCanvasElement',
  'MouseEvent',
  'KeyboardEvent',
  'ContextAttributes2d',
]
